Only compile align.cpp and test if EIGEN2 is found.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3885 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,12 +42,18 @@ set(forcefields
 )
 
 set(math_srcs
-    math/align.cpp
     math/matrix3x3.cpp
     math/spacegroup.cpp
     math/transform3d.cpp
     math/vector3.cpp
 )
+
+if (EIGEN2_FOUND)
+set(math_srcs
+        ${math_srcs}
+        math/align.cpp
+)
+endif (EIGEN2_FOUND)
 
 set(ops
   ops/addpolarh.cpp
