* tools/CMakeLists.txt: Only link getopt.c if needed. Removes         warnings from Clang and GCC about strlen on non-glibc platforms         (e.g. Mac).
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3906 71e0b675-c112-0410-beda-96664073b5c2

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -19,6 +19,10 @@ else(MINIMAL_BUILD)
   )
 endif(MINIMAL_BUILD)
 
+INCLUDE(CheckFunctionExists)
+SET(GETOPT getopt)
+CHECK_FUNCTION_EXISTS(${GETOPT} GETOPT_FOUND)
+
 foreach(tool ${tools})
   add_executable(${tool} ${tool}.cpp)
   target_link_libraries(${tool} ${BABEL_LIBRARY})
@@ -35,7 +39,11 @@ endforeach(tool)
 
 if(NOT MINIMAL_BUILD)
   # obspectrophore -- requires getopt
+if (NOT GETOPT_FOUND)
   add_executable(obspectrophore obspectrophore.cpp getopt.c)
+else(NOT GETOPT_FOUND)
+  add_executable(obspectrophore obspectrophore.cpp)
+endif(NOT GETOPT_FOUND)
   target_link_libraries(obspectrophore ${BABEL_LIBRARY})
   if(MSVC)
     set_target_properties(obspectrophore PROPERTIES
@@ -48,7 +56,11 @@ if(NOT MINIMAL_BUILD)
   )
 
   # obgrep -- requires getopt
+if (NOT GETOPT_FOUND)
   add_executable(obgrep obgrep.cpp getopt.c)
+else(NOT GETOPT_FOUND)
+  add_executable(obgrep obgrep.cpp)
+endif(NOT GETOPT_FOUND)
   target_link_libraries(obgrep ${BABEL_LIBRARY})
   if(MSVC)
     set_target_properties(obgrep PROPERTIES
