--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -31,7 +31,7 @@ PROJECT_NAME           = "Open Babel"
 # This could be handy for archiving the generated documentation or
 # if some version control system is used.
 
-PROJECT_NUMBER         = ${BABEL_VERSION}
+PROJECT_NUMBER         = 2.3
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
@@ -585,9 +585,12 @@ INPUT                  = doc/modules.h \
                          include/openbabel \
                          include/openbabel/math \
                          include/openbabel/stereo \
+                         include/openbabel/depict \
                          src/ \
                          src/math \
-                         include/RDKitConv.h
+                         src/depict \
+                         include/RDKitConv.h \
+                         include/OB-BGL
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
