* scripts/CMakeLists.txt: Patch from Wayne Volkmuth to fix use of         PYTHON_PREFIX PR#3038634.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3936 71e0b675-c112-0410-beda-96664073b5c2

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -73,15 +73,15 @@ if (PYTHON_BINDINGS)
             COMMAND ${CMAKE_COMMAND} -E remove ob.py
             VERBATIM)
 
-        if (${PYTHON_PREFIX})
+        if (PYTHON_PREFIX)
             install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install --prefix=${PYTHON_PREFIX} WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
-        else (${PYTHON_PREFIX})
+        else (PYTHON_PREFIX)
             if (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
                 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
             else (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
                 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py install --prefix=${CMAKE_INSTALL_PREFIX} WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts)")
             endif (${CMAKE_INSTALL_PREFIX} EQUAL "/usr/local")
-        endif (${PYTHON_PREFIX})
+        endif (PYTHON_PREFIX)
 
     else(NOT WIN32)
         add_library(bindings_python MODULE ${openbabel_SOURCE_DIR}/scripts/python/openbabel-python.cpp)
