Add additional tests -- canonical SMILES consistency.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3984 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,13 +11,13 @@ add_definitions(-DFORMATDIR="\\"${openbabel_BINARY_DIR}/lib/\\"")
 set(tests
     automorphism
     builder
+    canonconsistent
     cistrans
     graphsym
     lssr
     isomorphism
     rotor
     smiles
-    sdfcansmi
     spectrophore
     squareplanar
     stereo
