Added support for FHI-aims geometry files.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3996 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -19,6 +19,7 @@ set(formats_compchem
       adfformat
       dmolformat
       fchkformat
+      fhiaimsformat
       gamessformat
       gaussformat
       gausscubeformat
