Added support for DL-POLY CONFIG files: http://www.cse.scitech.ac.uk/ccg/software/DL_POLY/
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4020 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -64,6 +64,7 @@ set(formats_misc
       cifformat
       crkformat
       cssrformat
+      dlpolyformat
       fastsearchformat
       fastaformat
       featformat
