* src/formats/pdbqtformat.cpp: Add new format from Stuart         Armstrong, InHiBOx.
        * src/formats/CMakeLists.txt: Ditto.



git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4025 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -83,6 +83,7 @@ set(formats_misc
       opendxformat
       outformat
       pcmodelformat
+      pdbqtformat
       pqrformat
       shelxformat
       thermoformat
