More optimizations for automorphisms/canonical coding.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4063 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,6 +102,7 @@ set(openbabel_srcs
     chargemodel.cpp
     chiral.cpp
     data.cpp
+    datacache.cpp
     descriptor.cpp
     fingerprint.cpp
     forcefield.cpp
