Update CMake build files for static build on linux/win32.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4094 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(BABEL_LIBRARY openbabel)
 if(EMBED_OPENBABEL)
   set(BABEL_VERSION  "${BABEL_MAJ_VER}.${BABEL_MIN_VER}.${BABEL_PATCH_VER}" PARENT_SCOPE)
 else(EMBED_OPENBABEL)
-  set(BABEL_VERSION  "${BABEL_MAJ_VER}.${BABEL_MIN_VER}.${BABEL_PATCH_VER}")  
+  set(BABEL_VERSION  "${BABEL_MAJ_VER}.${BABEL_MIN_VER}.${BABEL_PATCH_VER}")
 endif(EMBED_OPENBABEL)
 set(BABEL_DATADIR  "${CMAKE_INSTALL_PREFIX}/share/openbabel")
 
@@ -53,7 +53,7 @@ else(UNIX) # Windows - bin dir = lib dir to load libraries
   if(MSVC)
     set(OB_PLUGIN_INSTALL_DIR "${BIN_INSTALL_DIR}"
       CACHE PATH "Install dir for plugins")
-  else(MSVC)  
+  else(MSVC)
     if(ENABLE_VERSIONED_FORMATS)
       set(OB_PLUGIN_INSTALL_DIR "lib${LIB_SUFFIX}/openbabel/${BABEL_VERSION}"
         CACHE PATH "Install dir for plugins")
@@ -85,6 +85,14 @@ if(BUILD_SHARED)
 else(BUILD_SHARED)
   set(BUILD_TYPE STATIC)
   set(PLUGIN_TYPE STATIC)
+
+  if(MSVC)
+    # set cl flags for static compiling
+    set(CMAKE_CXX_FLAGS_RELEASE
+	"/MT /O2 /Ob2 /D NDEBUG")
+    set(CMAKE_EXE_LINKER_FLAGS_RELEASE
+	"/INCREMENTAL:NO /NODEFAULTLIB:MSVCRT")
+  endif(MSVC)
 endif(BUILD_SHARED)
 
 if(WIN32)
@@ -106,6 +114,12 @@ if(ZLIB_FOUND)
   if(WIN32)
     add_definitions(-DDISABLE_WRITE_COMPRESSION)
   endif(WIN32)
+
+  # static build
+  if(NOT BUILD_SHARED)
+    set(STATIC_ZLIB_NAMES z.a zlib.a zdll.a libz.a)
+    find_library(ZLIB_LIBRARY NAMES ${STATIC_ZLIB_NAMES} )
+  endif(NOT BUILD_SHARED)
 endif(ZLIB_FOUND)
 # wxWidgets instructions based on http://wiki.wxwidgets.org/CMake
 #find_package(wxWidgets COMPONENTS base core REQUIRED)
@@ -256,7 +270,7 @@ if(${CMAKE_CXX_COMPILER_ID} MATCHES Intel AND UNIX)
 
   set(CMAKE_C_FLAGS_RELEASE "-O3 -ipo1 -DNDEBUG -Wl,-s")
   set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ipo1 -DNDEBUG -Wl,-s")
-  
+
   # define WITH_SSE2 to enable the SSE2 instruction set.
   # Available on Pentium 4, Athlon 64, and newer CPUs.
   if(CMAKE_SIZEOF_VOID_P EQUAL 8 OR WITH_SSE2)
