Forgot CMakeLists.txt for OpCanonical
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4099 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,7 @@ endif (EIGEN2_FOUND)
 set(ops
   ops/addinindex.cpp
   ops/addpolarh.cpp
+  ops/canonical.cpp
   ops/gen2D.cpp
   ops/fillUC.cpp
   ops/forcefield.cpp
