Added OBChargeModel tests for MMFF94 and Gasteiger models.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4106 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -65,6 +65,8 @@ set(old_tests
     atom
     bond
     cansmi
+    charge-mmff94
+    charge-gasteiger
     cmlreadfile
     conversion
     datatest
