--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -75,15 +75,25 @@ if(BUILD_SHARED)
   endif(NOT MINIMAL_BUILD)
 else(BUILD_SHARED)
   if (NOT MSVC)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc")
-    # make sure the linker will find the static libstdc++
-    file(REMOVE "${CMAKE_BINARY_DIR}/libstdc++.a")
-    execute_process(COMMAND "g++" "-print-file-name=libstdc++.a"
-                    OUTPUT_VARIABLE libstdcpp
-                    OUTPUT_STRIP_TRAILING_WHITESPACE)
-    execute_process(COMMAND "ln" "-s" "${libstdcpp}"
-                    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-    link_directories(${CMAKE_BINARY_DIR})
+    if (BUILD_MIXED)
+      #
+      # Relocatable binaries on linux using -static-libgcc
+      #
+      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc")
+      # make sure the linker will find the static libstdc++
+      file(REMOVE "${CMAKE_BINARY_DIR}/libstdc++.a")
+      execute_process(COMMAND "g++" "-print-file-name=libstdc++.a"
+                      OUTPUT_VARIABLE libstdcpp
+                      OUTPUT_STRIP_TRAILING_WHITESPACE)
+      execute_process(COMMAND "ln" "-s" "${libstdcpp}"
+                      WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+      link_directories(${CMAKE_BINARY_DIR})
+    else(BUILD_MIXED)
+      #
+      # Default static build on linux.
+      #
+      set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
+    endif(BUILD_MIXED)
   endif(NOT MSVC)
 
   # build a static babel only
